trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ body {
 .polaroids > div {
   /*margin: 10px;*/
   flex: 1;
-  min-width: 150px;
+  /*min-width: 150px;*/
 }
 .polaroids div {
   -webkit-transform: rotate(-2deg);
